--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.text_field :link %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.collection_select :user_id, User.order(:username), :id, :username, include_blank: true %>
   <p><%= f.submit %></p>
 <% end %>
