--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,7 +14,7 @@
       <a class="general-links" href="/jobs">jobs</a>|
       <a class="general-links" href="/articles/new">submit</a>
     </span>
-    <a id="login" href="/login">login</a>
+    <a id="login" href="/users/new">login</a>
 
   </div>
   <% @articles.each do |article| %>
